--- a/mod-2/2-0-1-css/lecture-code/4-links-pseudo-selectors/index.css
+++ b/mod-2/2-0-1-css/lecture-code/4-links-pseudo-selectors/index.css
@@ -1,3 +1,18 @@
+/* Selectors, pseudo-selectors, specificity */
+tag {}
+.class {}
+#id {}
+
+ul.links-list > li {
+  background: lightgrey;
+}
+
+li {
+  background: red;
+}
+
+
+
 a { color: black; }
 a:visited { color: purple } /* a link once a user has visited the page */
 a:hover { color: red } /* a link when the mouse hovers over it */
