--- a/mod-2/2-1-0-flexbox/lecture/2-flexing/style.css
+++ b/mod-2/2-1-0-flexbox/lecture/2-flexing/style.css
@@ -26,9 +26,10 @@ article {
 
 /* By default, flex items will expand to fit the space */
 .container > article {
-  /* flex-basis: 0; */
-  /* width: 100%; */
   /* flex-grow: 1; */
+  /* flex-shrink: 1; */
+  /* flex-basis: 0; */
+  /* flex: 1; */
 }
 
 
