--- a/mod-2/2-1-1-grid-media-queries/lecture/2-grid-template-columns/style.css
+++ b/mod-2/2-1-1-grid-media-queries/lecture/2-grid-template-columns/style.css
@@ -22,11 +22,11 @@ div { border-radius: 9px; padding: 0.5rem; }
   
   /* Grid Props*/
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr; /* make 4 equal-sized columns */
+  grid-template-columns: repeat(4, 1fr); /* make 4 equal-sized columns */
+  grid-auto-rows: 20vh;
   
   /* grid-template-columns: repeat(4, 1fr) */
 
-  /* grid-auto-rows: 1fr; */
   
   gap: 1em;
 }
